Fix edge case causing slight clipping of edge graph

--- a/ui/src/app/components/results/results.component.scss
+++ b/ui/src/app/components/results/results.component.scss
@@ -60,7 +60,7 @@
     padding: 0;
     margin: 2px 0;
     height: 100%;
-    max-width: 33%;
+    max-width: 32%;
 }
 
 .roc-graphs {
